--- a/backend/react-frontend/prod_files/index.html
+++ b/backend/react-frontend/prod_files/index.html
@@ -1,1 +1,1 @@
-<div id="app"></div><script src="/react-frontend.09619817.js"></script>
+<div id="app"></div><script src="./react-frontend.09619817.js"></script>
